# DAGIntel

./: .env.example  .gitignore  Makefile  README.md  app.py  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci.yml
.streamlit/: config.toml
app/: streamlit_app.py
hf-space/: .gitignore  README.md  app.py
hf-space/scenarios/: db_connection_timeout.json  memory_error.json  schema_drift.json  sensor_timeout.json
hf-space/src/dagintel/: agents.py  crew.py  llm.py  scenarios.py  telemetry.py  textutil.py  ui_helpers.py
hf-space/src/dagintel/prompts/: log_analyzer.md  root_cause.md
hf-space/src/dagintel/tools/: log_signals.py
scenarios/: pool_exhaustion.json
scripts/: serve_qwen3.sh  sync_hf_space.sh
src/dagintel/: agents.py  llm.py  scenarios.py  tasks.py  telemetry.py
src/dagintel/prompts/: fix_suggester.md  root_cause.md
src/dagintel/tools/: __init__.py
tests/: conftest.py  test_crew_mocks.py  test_llm_config.py  test_log_signals.py  test_scenarios.py  test_shared_ui.py  test_textutil.py
