[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "dagintel"
version = "0.1.0"
description = "Apache Airflow log triage prototype using CrewAI agents"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.8"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff.lint.per-file-ignores]
# Entrypoints insert `src/` on sys.path before importing `dagintel`.
"app.py" = ["E402"]
"app/streamlit_app.py" = ["E402"]
